input/output + infos component

--- a/src/app/university/add-uni/add-uni.component.html
+++ b/src/app/university/add-uni/add-uni.component.html
@@ -21,15 +21,15 @@
         </div>
           <br>
           <div *ngIf="UniverstyName.invalid" class="ng-invalid">
-            <div *ngIf="UniverstyName.errors!['required']">
+            <div *ngIf="UniverstyName.errors['required']">
               Empty Field ! 
             </div>
-            <div *ngIf="UniverstyName.errors!['minlength']">
-            min {{UniverstyName.errors!['minlength']['requiredLength']}} letters,
+            <div *ngIf="UniverstyName.errors['minlength']">
+            min {{UniverstyName.errors['minlength']['requiredLength']}} letters,
             but you wrote only 
-            {{ UniverstyName.errors!['minlength']['actualLength'] }}
+            {{ UniverstyName.errors['minlength']['actualLength'] }}
             </div>
-            <div *ngIf="UniverstyName.errors!['pattern']">
+            <div *ngIf="UniverstyName.errors['pattern']">
                 Only letters are required !
             </div>
             </div>
@@ -44,13 +44,13 @@
         </div>
         <br>
           <div *ngIf="adresse.invalid" class="ng-invalid">
-            <div *ngIf="adresse.errors!['required']">
+            <div *ngIf="adresse.errors['required']">
               Empty Field ! 
             </div>
-            <div *ngIf="adresse.errors!['minlength']">
-              min {{adresse.errors!['minlength']['requiredLength']}} letters,
+            <div *ngIf="adresse.errors['minlength']">
+              min {{adresse.errors['minlength']['requiredLength']}} letters,
               but you wrote only  
-            {{ adresse.errors!['minlength']['actualLength'] }}
+            {{ adresse.errors['minlength']['actualLength'] }}
             </div>
             </div>
             <br>
@@ -65,13 +65,13 @@
         </div>
           <br>
           <div *ngIf="desc.invalid" class="ng-invalid">
-            <div *ngIf="desc.errors!['required']">
+            <div *ngIf="desc.errors['required']">
               Empty Field ! 
             </div>
-            <div *ngIf="desc.errors!['minlength']">
-              min {{desc.errors!['minlength']['requiredLength']}} letters,
+            <div *ngIf="desc.errors['minlength']">
+              min {{desc.errors['minlength']['requiredLength']}} letters,
               but you wrote only  
-            {{ desc.errors!['minlength']['actualLength'] }}
+            {{ desc.errors['minlength']['actualLength'] }}
             </div>
             </div>
             <br>
@@ -86,13 +86,13 @@
         </div>
         <br>
           <div *ngIf="found.invalid" class="ng-invalid" >
-            <div *ngIf="found.errors!['required']">
+            <div *ngIf="found.errors['required']">
               Empty Field ! 
             </div>
-            <div *ngIf="found.errors!['minlength']">
-              min {{found.errors!['minlength']['requiredLength']}} letters,
+            <div *ngIf="found.errors['minlength']">
+              min {{found.errors['minlength']['requiredLength']}} letters,
               but you wrote only 
-            {{ found.errors!['minlength']['actualLength'] }}
+            {{ found.errors['minlength']['actualLength'] }}
             </div>
             </div>
             <br>
@@ -139,7 +139,7 @@
             <a href="#"> terms, conditions, and policies</a>
           </label>
         </div>
-   
+        
         <button class="formbold-btn"  [disabled]="f.invalid">save</button> 
        
     
